Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationLittleMinusChomped.calc
a .0e-23 b 1.e-25 c 2.3e-31 d 34.5e-45 e 6.78e-73 f 99.99e-56 g 3e-93 h 76e-45
.0e-23
1.e-25
2.3e-31
34.5e-45
6.78e-73
99.99e-56
3e-93
76e-45
a .0e-2 b 1.e-2 c 2.3e-3 d 34.5e-4 e 6.78e-7 f 99.99e-5 g 3e-9 h 76e-4
.0e-2
1.e-2
2.3e-3
34.5e-4
6.78e-7
99.99e-5
3e-9
76e-4