Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittlePlusWithBadCharacters-45Chomped.calc
a .0e+%2 b 1.e+%2 c 2.3e+%3 d 34.5e+%4 e 6.78e+%7 f 99.99e+%5 g 3e+%9 h 76e+%4